fixed services-section overflow issue

--- a/css/style.css
+++ b/css/style.css
@@ -107,14 +107,17 @@ html {
 #services {
   margin: 34px;
   display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 #services .box {
   border: 2px solid brown;
   padding: 34px;
-  margin: 2px 55px;
+  margin: 2px 55px 20px 55px;
   border-radius: 28px;
   background: #f2f2f2;
-  margin-bottom: 20px;
+  width: 300px;
+  height: 850px;
 }
 
 #services .box img {
